[package]
name = "dpb"
version = "0.1.0"
edition = "2021"

[dependencies]
http = "1.1.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
toml = "0.8.16"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
reqwest = { version = "0.12.5", features = ["json"] }
