[package]
name = "dpb"
version = "1.0.0-rc.2"
edition = "2021"

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
log = "0.4.22"
reqwest = { version = "0.12.5", features = ["json", "blocking"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
stderrlog = "0.6.0"
toml = "0.8.16"
